 - Add 'enabled' field to contest to allow for easier editing.
 - Only show the configured submission methods in the team manual.
 - Fix install of gendbpasswords and use /dev/urandom.
 - Add documentation on static_scoreboard.
 - Add problem subject to clarifications, idea from DomJudge@FAU.
 - Add WHILE command and tests to checktestdata syntax.

Version 3.0.0 Release Candidate 2 - 3 September 2009
----------------------------------------------------
 - Fix directory install permissions.
 - Only show languages that are not submitable as 'disabled'
   and show a separator between contests on the problems page.
 - Minor updates to team manual.

Version 3.0.0 Release Candidate 1 - 16 June 2009
------------------------------------------------
 - Raise required PHP version to 5.
 - Replace included static bash by dash shell.
 - Revise team manual.
 - Add missing link to add testcases to a new problem.
 - Fix bug causing segfaults of submitdaemon. (Closes: #2046031)
 - Added script to check results of submitted test-sources.
 - Added 'checktestdata' script for checking testdata via grammar specification.
 - Add support for FHS directory structure installation.
 - Move all configure paths to globally included paths.mk file.
 - Repair broken documentation build/install system.
 - MySQL table types are now InnoDB. Define foreign key relations
   between tables (Closes: #2144325).
 - Use db values instead of the userinput. (Closes #2144718)
 - Add a FLUSH PRIVILEGES statement after user grants during
   installation, as this may be necessary to have MySQL pick up
   all changes correctly.
 - Don't use -fstack-protector under Cygwin. (Closes: #2144713)
 - Distribute prebuilt versions of the admin and judge manuals and
   remove svn,expdlist downloads for the team manual.
 - New compactified layout of team manual.
 - Add note about Java class naming in team manual. (Closes: #2153189)
 - Add Java compile script that autodetects class name. (Closes: #1964765)