@@ -13,6 +13,7 @@ Version 3.1.0 - SVN
  - Add documentation on static_scoreboard.
  - Add problem subject to clarifications, idea from DomJudge@FAU.
  - Add WHILE command and tests to checktestdata syntax.
+ - Move PENALTY_TIME variable out of common-config into domserver-config.
 
 Version 3.0.0 Release Candidate 2 - 3 September 2009
 ----------------------------------------------------
